<?xml version="1.0"?>
<package>
  <name>particle_filter_localization</name>
  <version>0.0.0</version>
  <description>The particle_filter_localization package</description>

  <maintainer email="your_email@your_domain.com">Your Name</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
</package>
